rover_fisico/ROS2_ROVER/log/build_2025-11-27_20-29-11/ctrl_vel_motores/stdout_stderr.log
running egg_info
creating ../../build/ctrl_vel_motores/ctrl_vel_motores.egg-info
writing ../../build/ctrl_vel_motores/ctrl_vel_motores.egg-info/PKG-INFO
writing dependency_links to ../../build/ctrl_vel_motores/ctrl_vel_motores.egg-info/dependency_links.txt
writing entry points to ../../build/ctrl_vel_motores/ctrl_vel_motores.egg-info/entry_points.txt
writing requirements to ../../build/ctrl_vel_motores/ctrl_vel_motores.egg-info/requires.txt
writing top-level names to ../../build/ctrl_vel_motores/ctrl_vel_motores.egg-info/top_level.txt
writing manifest file '../../build/ctrl_vel_motores/ctrl_vel_motores.egg-info/SOURCES.txt'
reading manifest file '../../build/ctrl_vel_motores/ctrl_vel_motores.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/ctrl_vel_motores/ctrl_vel_motores.egg-info/SOURCES.txt'
running build
running build_py
creating /home/javier/ROVER_V1/build/ctrl_vel_motores/build
creating /home/javier/ROVER_V1/build/ctrl_vel_motores/build/lib
creating /home/javier/ROVER_V1/build/ctrl_vel_motores/build/lib/ctrl_vel_motores
copying ctrl_vel_motores/velocidad_teclado.py -> /home/javier/ROVER_V1/build/ctrl_vel_motores/build/lib/ctrl_vel_motores
copying ctrl_vel_motores/__init__.py -> /home/javier/ROVER_V1/build/ctrl_vel_motores/build/lib/ctrl_vel_motores
running install
running install_lib
creating /home/javier/ROVER_V1/install/ctrl_vel_motores/lib/python3.12/site-packages/ctrl_vel_motores
copying /home/javier/ROVER_V1/build/ctrl_vel_motores/build/lib/ctrl_vel_motores/velocidad_teclado.py -> /home/javier/ROVER_V1/install/ctrl_vel_motores/lib/python3.12/site-packages/ctrl_vel_motores
copying /home/javier/ROVER_V1/build/ctrl_vel_motores/build/lib/ctrl_vel_motores/__init__.py -> /home/javier/ROVER_V1/install/ctrl_vel_motores/lib/python3.12/site-packages/ctrl_vel_motores
byte-compiling /home/javier/ROVER_V1/install/ctrl_vel_motores/lib/python3.12/site-packages/ctrl_vel_motores/velocidad_teclado.py to velocidad_teclado.cpython-312.pyc
  File "/home/javier/ROVER_V1/install/ctrl_vel_motores/lib/python3.12/site-packages/ctrl_vel_motores/velocidad_teclado.py", line 24
    self.get_logger().info(f'Velocidad: ' {vel})
                           ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

byte-compiling /home/javier/ROVER_V1/install/ctrl_vel_motores/lib/python3.12/site-packages/ctrl_vel_motores/__init__.py to __init__.cpython-312.pyc
running install_data
creating /home/javier/ROVER_V1/install/ctrl_vel_motores/share/ament_index
creating /home/javier/ROVER_V1/install/ctrl_vel_motores/share/ament_index/resource_index
creating /home/javier/ROVER_V1/install/ctrl_vel_motores/share/ament_index/resource_index/packages
copying resource/ctrl_vel_motores -> /home/javier/ROVER_V1/install/ctrl_vel_motores/share/ament_index/resource_index/packages
copying package.xml -> /home/javier/ROVER_V1/install/ctrl_vel_motores/share/ctrl_vel_motores
running install_egg_info
Copying ../../build/ctrl_vel_motores/ctrl_vel_motores.egg-info to /home/javier/ROVER_V1/install/ctrl_vel_motores/lib/python3.12/site-packages/ctrl_vel_motores-0.0.0-py3.12.egg-info
running install_scripts
Installing talker script to /home/javier/ROVER_V1/install/ctrl_vel_motores/lib/ctrl_vel_motores
writing list of installed files to '/home/javier/ROVER_V1/build/ctrl_vel_motores/install.log'
